# amplify

./: Makefile.am  configure.ac
src/: BooleanType.cpp  BooleanType.hpp  BooleanTypeImpl.hpp  CodeType.cpp  CodeType.hpp  CodeTypeImpl.hpp  CustomTypes.hpp  FitnessCaseEvaluator.hpp  FitnessStopEvaluator.hpp  FloatType.cpp  FloatType.hpp  FloatTypeImpl.hpp  GPSystem.cpp  GPSystem.hpp  GPSystemParser.y  InputGenerator.hpp  Instruction.hpp  IntegerType.cpp  IntegerType.hpp  IntegerTypeImpl.hpp  Interpreter.cpp  Interpreter.hpp  Lexer.qx  ListType.cpp  ListType.hpp  ListTypeImpl.hpp  Logging.hpp  NameType.cpp  NameType.hpp  NameTypeImpl.hpp  Parser.y  Program.cpp  Program.hpp  ProgramSelector.hpp  ProgramTransform.hpp  Random.hpp  Runtime.cpp  Runtime.hpp  StackBase.hpp  StringType.cpp  (+9 more)
